# rs_text_recognition_worker

./: .travis.yml  Cargo.toml  README.md
examples/: message.json  tesseract.json
src/: main.rs  message.rs  region_of_interest.rs
