[package]
name = "rs_text_recognition_worker"
version = "0.1.0"
authors = [
  "Valentin Noel <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
edition = "2018"

[dependencies]
mcai_worker_sdk = {version = "0.10.4", features = ["media"], path="../mcai_worker_sdk/rs_mcai_worker_sdk"}
schemars = "0.7.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
stainless-ffmpeg-sys = "4.2.3"
tesseract = "0.6.0"

[build-dependencies]
built = "0.4.1"
