[package]
name = "rs_text_recognition_worker"
version = "0.1.0"
authors = ["Valentin NOEL <valentin.noel@media-io.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcai_worker_sdk = "0.11.5"
serde = "1.0.34"
serde_json = "1.0.34"
stainless-ffmpeg-sys = "4.2.2-update.1"
stainless_ffmpeg = { git = "https://github.com/nomalab/stainless-ffmpeg.git", branch = "master" }
tesseract = "0.5.0"

[build-dependencies]
built = "0.4.1"
